# evidenceops-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: cli.py  config.py  ingest.py  models.py  multi_agent_orchestrator.py  orchestrator.py
app/agents/: multi_agent_research.py  research_agent.py
app/services/: index_service.py  llm.py
app/tools/: research_tools.py
data/: adversarial_prompt_injection.md  agent_engineering_controls.md  ai_governance_overview.md  operational_procedures.md  retrieval_evaluation.md  technical_security_policy.md
evaluation/: agent_questions.jsonl  compare_chunking.py  compare_single_multi.py  evaluate_agent.py  evaluate_retrieval.py  generate_report.py  questions.jsonl
reports/: evaluation_report.md
tests/: test_api.py  test_models.py  test_orchestrator.py  test_research_tools.py
